Fix modal dialog z-index issue.

--- a/framebuzz/static/framebuzz/player/app/sass/sass/screen.scss
+++ b/framebuzz/static/framebuzz/player/app/sass/sass/screen.scss
@@ -1603,7 +1603,7 @@ object, embed, video, iframe {
             position: absolute;
             height: 360px;
             width: 640px;
-            z-index: 1;
+            z-index: 20;
 
             @media screen and (max-width: 581px) {
                 width: 580px;
